--- a/alx-movie-app/package.json
+++ b/alx-movie-app/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@fortawesome/fontawesome-svg-core": "latest",
+    "@fortawesome/free-brands-svg-icons": "latest",
+    "@fortawesome/react-fontawesome": "latest",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6",
-    "tailwindcss": "^3.4.1",
-    "@fortawesome/fontawesome-svg-core": "^0.2.2",
-    "@fortawesome/free-brands-svg-icons": "^0.2.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@ducanh2912/next-pwa": "^10.2.9"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3",
-    "webpack": "^5.94.0"
+    "postcss": "^8",
+    "typescript": "^5",
+    "webpack": "^5.97.1"
   }
 }
